fixed header hero text vertical alignment

--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -59,7 +59,7 @@ h1 {
   width: 100%;
   height: 100%;
   display: flex;
-  align-items: flex-end;
+  align-items: center;
 }
 
 .aboutApp { 
