--- a/styles/styles.css
+++ b/styles/styles.css
@@ -480,7 +480,7 @@ h1 {
   width: 100%;
   height: 100%;
   display: flex;
-  align-items: flex-end;
+  align-items: center;
 }
 
 .aboutApp {
